--- a/nav.css
+++ b/nav.css
@@ -7,6 +7,7 @@
 a > span {
   color: #fff;
   font-size: 22px;
+  font-weight: 400;
 }
 
 nav {
@@ -15,9 +16,14 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 9px 20px;
+  font-family: "Roboto", sans-serif;
 }
 
 ul {
   display: flex;
   gap: 20px;
+}
+
+ul li a {
+  color: #fff;
 }
